修改环境配置，调试登录接口