@@ -1,40 +1,36 @@
 package com.heima.utils.common;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
+
 
 public class Base64Utils {
 
-    /**
-     * 解码
-     * @param base64
-     * @return
-     */
-    public static byte[] decode(String base64){
-        BASE64Decoder decoder = new BASE64Decoder();
-        try {
-            // Base64解码
-            byte[] b = decoder.decodeBuffer(base64);
-            for (int i = 0; i < b.length; ++i) {
-                if (b[i] < 0) {// 调整异常数据
-                    b[i] += 256;
-                }
-            }
-            return b;
-        } catch (Exception e) {
-            return null;
-        }
+
+    public static String encode(byte[] bytes) {
+        return Base64.getEncoder().encodeToString(bytes);
     }
 
 
-    /**
-     * 编码
-     * @param data
-     * @return
-     * @throws Exception
-     */
-    public static String encode(byte[] data) {
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(data);
+    public static String encodeBuffer(byte[] bytes) {
+        return Base64.getMimeEncoder().encodeToString(bytes);
     }
+
+
+    public static byte[] decode(String base64Str) {
+        return Base64.getDecoder().decode(base64Str);
+    }
+
+
+    public static String encode(String text) {
+        return encode(text.getBytes(StandardCharsets.UTF_8));
+    }
+
+
+    public static String decodeToString(String base64Str) {
+        byte[] decodedBytes = decode(base64Str);
+        return new String(decodedBytes, StandardCharsets.UTF_8);
+    }
+
+
 }
